--- a/index.html
+++ b/index.html
@@ -8,33 +8,45 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/main.css">
 </head>
-<body>
+<body class="banner">
 
      <header>
-        <nav class="encabezado">
-            <div class="encabezado__contenedor">
-                <h1 class="encabezado__titulo">GUNS AND ROSES</h1>
-                <img class="encabezado__logo-titulo" src="./img/gunsnroseslogo.jpg" alt="Logo de guns n roses">
-
-            </div>
-
-            <ul class="navegador">
-                <li class="navegador__item"><a href="./index.html">inicio</a></li>
-                <li class="navegador__item"><a href="./pages/integrantes.html">integrantes</a></li>
-                <li class="navegador__item"><a href="./pages/discografia.html">discografia</a></li>
-                <li class="navegador__item"><a href="./pages/tour.html">tour</a></li>
-                <li class="navegador__item"><a href="./pages/contacto.html">contacto</a></li>
+      <nav class="navbar navbar-expand-lg  bg-dark border-bottom border-body navbar fixed-top navbar-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand encabezado__logo-titulo" href="../index.html"><img src="./img/gunsnroseslogo.jpg" width="70px"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active color-nav" aria-current="page" href="./index.html">inicio</a>
+                  </li>
+              <li class="nav-item">
+                <a class="nav-link active color-nav" aria-current="page" href="./pages/integrantes.html">integrantes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link color-nav" href="./pages/discografia.html">discografia</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link color-nav" href="./pages/tour.html">tour</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link color-nav" href="./pages/contacto.html">contacto</a>
+              </li>
             </ul>
-        </nav>
+          </div>
+        </div>
+      </nav>
      </header>
 
-     <div>
-        <img src="./img/gunsnrosesbanner.jpg" alt="banda guns and roses" class="imagen-de-fondo">
-     </div>
-
      <footer>
-        <p class="pie-de-pagina">pagina web diseñada por: Lucas Morabito</p>
-
+      <div class="footer">
+        <img class="footer__logo" src="./img/spotify.jpg"   alt="spotify">
+        <img class="footer__logo" src="./img/instagram.jpg" alt="instagram">
+        <img class="footer__logo" src="./img/twitter.png"   alt="twitter">
+        <img class="footer__logo" src="./img/facebook.jpg"  alt="facebook">  
+        </div>
      </footer>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
