--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -10,20 +10,33 @@
 </head>
 <body>
     <header>
-        <nav class="encabezado">
-            <div class="encabezado__contenedor">
-                <h1 class="encabezado__titulo">DISCOGRAFIA</h1>
-                <img src="../img/gunsnroseslogo.jpg" alt="logo de guns and roses" class="encabezado__logo-titulo">
+        <nav class="navbar navbar-expand-lg  bg-dark border-bottom border-body navbar fixed-top navbar-dark">
+            <div class="container-fluid">
+              <a class="navbar-brand encabezado__logo-titulo" href="../index.html"><img src="../img/gunsnroseslogo.jpg" width="70px"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active color-nav" aria-current="page" href="../index.html">inicio</a>
+                      </li>
+                  <li class="nav-item">
+                    <a class="nav-link active color-nav" aria-current="page" href="./integrantes.html">integrantes</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link color-nav" href="./discografia.html">discografia</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link color-nav" href="./tour.html">tour</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link color-nav" href="./contacto.html" >contacto</a>
+                  </li>
+                </ul>
+              </div>
             </div>
-            
-            <ul>
-                <li class="navegador__item"><a href="../index.html">inicio</a></li>
-                <li class="navegador__item"><a href="./integrantes.html">integrantes</a></li>
-                <li class="navegador__item"><a href="./discografia.html">discografia</a></li>
-                <li class="navegador__item"><a href="./tour.html">tour</a></li>
-                <li class="navegador__item"><a href="./contacto.html">contacto</a></li>             
-            </ul>
-        </nav>
+          </nav>
     </header>
     <div class="album row" >
     
@@ -45,7 +58,12 @@
     </div>
 
     <footer>
-        <p class="pie-de-pagina">pagina web diseñada por: Lucas Morabito</p>
+        <div class="footer">
+            <img class="footer__logo" src="../img/spotify.jpg"   alt="spotify">
+            <img class="footer__logo" src="../img/instagram.jpg" alt="instagram">
+            <img class="footer__logo" src="../img/twitter.png"   alt="twitter">
+            <img class="footer__logo" src="../img/facebook.jpg"  alt="facebook">  
+            </div>
      </footer>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
