hice 2 paginas responsive (integrantes y discografía

--- a/pages/tour.html
+++ b/pages/tour.html
@@ -39,19 +39,36 @@
           </nav>
     </header>
 
-    <div class="tour">
-        <p class="tour-info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint qui mollitia saepe neque aliquam incidunt molestiae, ducimus ullam eum tempore voluptas omnis voluptatum assumenda rerum vitae culpa voluptatem delectus eaque quia harum, perferendis similique doloremque nemo hic! Nostrum asperiores quaerat vitae eum ut vel, deleniti explicabo accusantium quisquam! Iste, sequi?</p>
+    <div class="tour tour1">
+        <h3 class="tour-info">BUENOS AIRES</h3>
+        <h3 class="tour-info">ESTADIO OBRAS</h3>
+        <h3 class="tour-info">10 DE DICIEMBRE</h3>
         
     </div>
 
     <div class="tour">
-        <p class="tour-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero iusto quam excepturi numquam. Soluta, dolor. Facere sequi distinctio modi iure enim quas culpa, veniam quaerat quae nisi porro hic sint harum vero voluptates sapiente quis voluptas maiores veritatis ut eius magni accusantium laboriosam? Sint quod incidunt earum distinctio officia iure.</p>
+      <h3 class="tour-info">BUENOS AIRES</h3>
+      <h3 class="tour-info">MOVISTAR ARENA</h3>
+      <h3 class="tour-info">24 DE DICIEMBRE</h3>
 
     </div>
 
     <div class="tour">
-        <p class="tour-info">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis pariatur obcaecati quia corrupti temporibus quae animi cumque harum tempore? Sint ratione id numquam labore earum impedit sequi qui sed dolore, similique iste iusto, accusamus sapiente corporis corrupti aliquam. Provident illo distinctio cupiditate earum fugit dolore quae odio! Earum, corrupti facere!</p>
+      <h3 class="tour-info">BUENOS AIRES</h3>
+      <h3 class="tour-info">ESTADIO MONUMENTAL</h3>
+      <h3 class="tour-info">30 DE DICIEMBRE</h3>
+    </div>
 
+    <div class="tour">
+      <h3 class="tour-info">BRASIL</h3>
+      <h3 class="tour-info">ESTADIO MARACANÁ</h3>
+      <h3 class="tour-info">7 DE ENERO</h3>
+    </div>
+
+    <div class="tour">
+      <h3 class="tour-info">BRASIL</h3>
+      <h3 class="tour-info">SAO PAULO</h3>
+      <h3 class="tour-info">20 DE ENERO</h3>
     </div>
 
     <footer>
