--- a/pages/tour.html
+++ b/pages/tour.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tour</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@600&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/9f12e06fa6.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../sass/main.css">
 </head>
 <body>
     <header>
@@ -25,7 +32,7 @@
                     <a class="nav-link active color-nav" aria-current="page" href="./integrantes.html">integrantes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link color-nav" href="./discografia.html">discografia</a>
+                    <a class="nav-link color-nav" href="./discografia.html">discografía</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link color-nav" href="./tour.html">tour</a>
@@ -38,7 +45,7 @@
             </div>
           </nav>
     </header>
-
+<main>
     <div class="tour tour1">
         <h3 class="tour-info">BUENOS AIRES</h3>
         <h3 class="tour-info">ESTADIO OBRAS</h3>
@@ -46,38 +53,44 @@
         
     </div>
 
+    <div class="boton-padre"><input class="boton" type="button" value="Comprar" /></div>
+    
     <div class="tour">
       <h3 class="tour-info">BUENOS AIRES</h3>
       <h3 class="tour-info">MOVISTAR ARENA</h3>
       <h3 class="tour-info">24 DE DICIEMBRE</h3>
 
     </div>
+    <div class="boton-padre"><input class="boton" type="button" value="Comprar" /></div>
 
     <div class="tour">
       <h3 class="tour-info">BUENOS AIRES</h3>
       <h3 class="tour-info">ESTADIO MONUMENTAL</h3>
       <h3 class="tour-info">30 DE DICIEMBRE</h3>
     </div>
+    <div class="boton-padre"><input class="boton" type="button" value="Comprar" /></div>
 
     <div class="tour">
       <h3 class="tour-info">BRASIL</h3>
       <h3 class="tour-info">ESTADIO MARACANÁ</h3>
       <h3 class="tour-info">7 DE ENERO</h3>
     </div>
+    <div class="boton-padre"><input class="boton" type="button" value="Comprar" /></div>
 
     <div class="tour">
       <h3 class="tour-info">BRASIL</h3>
       <h3 class="tour-info">SAO PAULO</h3>
       <h3 class="tour-info">20 DE ENERO</h3>
     </div>
-
+    <div class="boton-padre"><input class="boton" type="button" value="Comprar" /></div>
+  </main>
     <footer>
-        <div class="footer">
-            <img class="footer__logo" src="../img/spotify.jpg"   alt="spotify">
-            <img class="footer__logo" src="../img/instagram.jpg" alt="instagram">
-            <img class="footer__logo" src="../img/twitter.png"   alt="twitter">
-            <img class="footer__logo" src="../img/facebook.jpg"  alt="facebook">  
-            </div>
+      <div class="footer">
+        <i class="fa-brands fa-spotify    fa-xl redes icon1" style="color: #ffffff;"></i>
+        <i class="fa-brands fa-youtube    fa-xl redes icon2" style="color: #ffffff;"></i>
+        <i class="fa-brands fa-x-twitter  fa-xl redes icon3" style="color: #ffffff;"></i>
+        <i class="fa-brands fa-facebook-f fa-xl redes icon4" style="color: #ffffff;"></i>
+        <i class="fa-brands fa-instagram  fa-xl redes icon5" style="color: #ffffff;"></i>
      </footer>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
