--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guns n Roses</title>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,900&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/9f12e06fa6.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./sass/main.css">
 </head>
 <body class="banner">
 
@@ -26,7 +37,7 @@
                 <a class="nav-link active color-nav" aria-current="page" href="./pages/integrantes.html">integrantes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link color-nav" href="./pages/discografia.html">discografia</a>
+                <a class="nav-link color-nav" href="./pages/discografia.html">discografía</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link color-nav" href="./pages/tour.html">tour</a>
@@ -39,14 +50,18 @@
         </div>
       </nav>
      </header>
-
+    <main>
+    <h1 class="animate__animated animate__fadeIn animate__delay-0.2s titulo">GUNS AND ROSES</h1>
+    </main>
+     
      <footer>
       <div class="footer">
-        <img class="footer__logo" src="./img/spotify.jpg"   alt="spotify">
-        <img class="footer__logo" src="./img/instagram.jpg" alt="instagram">
-        <img class="footer__logo" src="./img/twitter.png"   alt="twitter">
-        <img class="footer__logo" src="./img/facebook.jpg"  alt="facebook">  
-        </div>
+        <i class="fa-brands fa-spotify    fa-xl redes icon1" style="color: #ffffff;"></i>
+        <i class="fa-brands fa-youtube    fa-xl redes icon2" style="color: #ffffff;"></i>
+        <i class="fa-brands fa-x-twitter  fa-xl redes icon3" style="color: #ffffff;"></i>
+        <i class="fa-brands fa-facebook-f fa-xl redes icon4" style="color: #ffffff;"></i>
+        <i class="fa-brands fa-instagram  fa-xl redes icon5" style="color: #ffffff;"></i>
+       
      </footer>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
