agregué links al footer, hize cambios y partials

--- a/pages/integrantes.html
+++ b/pages/integrantes.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=">
@@ -42,6 +42,7 @@
         </div>
       </nav>
      </header>
+     
     <main>
      <div class="info" id="axl">
         <img src="../img/axlrose.jpg" alt="imagen de axl rose" class="cantante">
@@ -51,7 +52,7 @@
      <img src="../img/slash.jpg" alt="imagen de slash" class="cantante">
      <p class="info-cantante"><i>Saul Hudson (Hampstead, Londres; 23 de julio de 1965), más conocido por su nombre artístico Slash, es un músico y compositor británico-estadounidense, conocido principalmente por ser el guitarrista principal de la banda de hard rock Guns N' Roses.
 
-        Es el guitarrista principal del grupo de rock estadounidense Guns N' Roses, volviendo después de casi veinte años fuera de la banda. En 2004, cofundó el supergrupo Velvet Revolver junto con sus compañeros de Guns N' Roses, Duff McKagan y Matt Sorum, el guitarrista Dave Kushner (exmiembro de Suicidal Tendencies e Infectious Grooves) y el cantante Scott Weiland.</i></p>
+        Es el guitarrista principal del grupo de rock estadounidense Guns N' Roses, volviendo después de casi veinte años fuera de la banda. En 2004, cofundó el supergrupo Velvet Revolver junto con sus compañeros de Guns N' Roses.</i></p>
     </div>
     <div class="info" id="izzy">
       <img  src="../img/izzy.jog.jpg" alt="Izzy Stradlin" class="cantante">
@@ -60,18 +61,19 @@
 
     <div class="info">
       <img class="cantante" src="../img/mckagan.jpg" alt="McKagan">
-      <p class="info-cantante"><i>Michael Andrew "Duff" McKagan (Seattle, Washington, Estados Unidos; 5 de febrero de 1964) es un músico, compositor y productor discográfico estadounidense, es el bajista y vocalista hasta el año 1997 de la banda de hard rock Guns N' Roses y guitarrista de Loaded. McKagan empezó a tocar la guitarra a los 6 años. En 2011 publicó su autobiografía. En 2014 se reintegró de manera temporal a Guns N' Roses para la gira sudamericana y en el 2016 regresó de manera total a la banda después de casi 18 años.</i></p>
+      <p class="info-cantante"><i>Michael Andrew "Duff" McKagan (Seattle, Washington, Estados Unidos; 5 de febrero de 1964) es un músico, compositor y productor discográfico estadounidense, es el bajista y vocalista hasta el año 1997 de la banda de hard rock Guns N' Roses y guitarrista de Loaded. McKagan empezó a tocar la guitarra a los 6 años. En 2011 publicó su autobiografía. En 2014 se reintegró de manera temporal a Guns N' Roses para la gira sudamericana.</i></p>
     </div>
   </main>
      
      <footer>
       <div class="footer">
-        <i class="fa-brands fa-spotify    fa-xl redes icon1" style="color: #ffffff;"></i>
-        <i class="fa-brands fa-youtube    fa-xl redes icon2" style="color: #ffffff;"></i>
-        <i class="fa-brands fa-x-twitter  fa-xl redes icon3" style="color: #ffffff;"></i>
-        <i class="fa-brands fa-facebook-f fa-xl redes icon4" style="color: #ffffff;"></i>
-        <i class="fa-brands fa-instagram  fa-xl redes icon5" style="color: #ffffff;"></i>
+        <a href= "https://open.spotify.com/intl-es/artist/3qm84nBOXUEQ2vnTfUTTFC" target="_blank"><i class="fa-brands fa-spotify    fa-xl redes icon1" style="color: #ffffff;"></i></a> 
+        <a href="https://www.youtube.com/@gunsnroses/about"                       target="_blank"><i class="fa-brands fa-youtube    fa-xl redes icon2" style="color: #ffffff;"></i></a>
+        <a href="https://twitter.com/gunsnroses"                                  target="_blank"><i class="fa-brands fa-x-twitter  fa-xl redes icon3" style="color: #ffffff;"></i></a>
+        <a href="https://www.facebook.com/gunsnroses"                             target="_blank"><i class="fa-brands fa-facebook-f fa-xl redes icon4" style="color: #ffffff;"></i></a>
+        <a href="https://www.instagram.com/gunsnroses/"                           target="_blank"><i class="fa-brands fa-instagram  fa-xl redes icon5" style="color: #ffffff;"></i></a>
      </footer>
+
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
