--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@400;500&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/9f12e06fa6.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -51,17 +51,16 @@
       </nav>
      </header>
     <main>
-    <h1 class="animate__animated animate__fadeIn animate__delay-0.2s titulo">GUNS AND ROSES</h1>
+    <h1 class="animate__animated animate__fadeIn animate__delay-0.2s titulo"><i>GUNS AND ROSES</i></h1>
     </main>
      
      <footer>
       <div class="footer">
-        <i class="fa-brands fa-spotify    fa-xl redes icon1" style="color: #ffffff;"></i>
-        <i class="fa-brands fa-youtube    fa-xl redes icon2" style="color: #ffffff;"></i>
-        <i class="fa-brands fa-x-twitter  fa-xl redes icon3" style="color: #ffffff;"></i>
-        <i class="fa-brands fa-facebook-f fa-xl redes icon4" style="color: #ffffff;"></i>
-        <i class="fa-brands fa-instagram  fa-xl redes icon5" style="color: #ffffff;"></i>
-       
+        <a href= "https://open.spotify.com/intl-es/artist/3qm84nBOXUEQ2vnTfUTTFC" target="_blank"><i class="fa-brands fa-spotify    fa-xl redes icon1" style="color: #ffffff;"></i></a> 
+        <a href="https://www.youtube.com/@gunsnroses/about"                       target="_blank"><i class="fa-brands fa-youtube    fa-xl redes icon2" style="color: #ffffff;"></i></a>
+        <a href="https://twitter.com/gunsnroses"                                  target="_blank"><i class="fa-brands fa-x-twitter  fa-xl redes icon3" style="color: #ffffff;"></i></a>
+        <a href="https://www.facebook.com/gunsnroses"                             target="_blank"><i class="fa-brands fa-facebook-f fa-xl redes icon4" style="color: #ffffff;"></i></a>
+        <a href="https://www.instagram.com/gunsnroses/"                           target="_blank"><i class="fa-brands fa-instagram  fa-xl redes icon5" style="color: #ffffff;"></i></a>
      </footer>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
