--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -47,27 +47,29 @@
    <main>
     <form action="" class="formulario">
       <h2       class="formulario__titulo">CONTACTO</h2>
-      <input    class="formulario__input"     type="text" name="nombre" placeholder="nombre">
-      <input    class="formulario__input"     type="text" name="correo" placeholder="correo">
-      <input    class="formulario__input"     type="text" name="telefono" placeholder="telefono">
-      <textarea class="formulario__textarea"  name="mensaje" placeholder="escriba aqui"></textarea>
+      <h3 class="formulario__nombre">Nombre:</h3>
+      <input    class="formulario__input"     type="text" name="nombre" placeholder="Ingrese su nombre">
+      <h3 class="formulario__nombre">Correo:</h3>
+      <input    class="formulario__input"     type="text" name="correo" placeholder="Ingrese su email">
+      <h3 class="formulario__nombre">Telefono:</h3>
+      <input    class="formulario__input"     type="text" name="telefono" placeholder="Ingrese su número de teléfono">
+      <h3 class="formulario__nombre">Mensaje:</h3>
+      <textarea class="formulario__textarea"  name="mensaje" placeholder="Escriba aquí"></textarea>
       <input    class="formulario__boton"     type="submit" value="enviar">
       <input    class="formulario__boton"     type="reset"  value="reiniciar">
-
-
     </form>
   </main>
+
     <footer>
       <div class="footer">
-      <i class="fa-brands fa-spotify    fa-xl redes icon1" style="color: #ffffff;"></i>
-      <i class="fa-brands fa-youtube    fa-xl redes icon2" style="color: #ffffff;"></i>
-      <i class="fa-brands fa-x-twitter  fa-xl redes icon3" style="color: #ffffff;"></i>
-      <i class="fa-brands fa-facebook-f fa-xl redes icon4" style="color: #ffffff;"></i>
-      <i class="fa-brands fa-instagram  fa-xl redes icon5" style="color: #ffffff;"></i>
-     
+        <a href= "https://open.spotify.com/intl-es/artist/3qm84nBOXUEQ2vnTfUTTFC" target="_blank"><i class="fa-brands fa-spotify    fa-xl redes icon1" style="color: #ffffff;"></i></a> 
+        <a href="https://www.youtube.com/@gunsnroses/about"                       target="_blank"><i class="fa-brands fa-youtube    fa-xl redes icon2" style="color: #ffffff;"></i></a>
+        <a href="https://twitter.com/gunsnroses"                                  target="_blank"><i class="fa-brands fa-x-twitter  fa-xl redes icon3" style="color: #ffffff;"></i></a>
+        <a href="https://www.facebook.com/gunsnroses"                             target="_blank"><i class="fa-brands fa-facebook-f fa-xl redes icon4" style="color: #ffffff;"></i></a>
+        <a href="https://www.instagram.com/gunsnroses/"                           target="_blank"><i class="fa-brands fa-instagram  fa-xl redes icon5" style="color: #ffffff;"></i></a>
     </div>
-
      </footer>
+     
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
