--- a/pages/tour.html
+++ b/pages/tour.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -84,14 +84,16 @@
     </div>
     <div class="boton-padre"><input class="boton" type="button" value="Comprar" /></div>
   </main>
+  
     <footer>
       <div class="footer">
-        <i class="fa-brands fa-spotify    fa-xl redes icon1" style="color: #ffffff;"></i>
-        <i class="fa-brands fa-youtube    fa-xl redes icon2" style="color: #ffffff;"></i>
-        <i class="fa-brands fa-x-twitter  fa-xl redes icon3" style="color: #ffffff;"></i>
-        <i class="fa-brands fa-facebook-f fa-xl redes icon4" style="color: #ffffff;"></i>
-        <i class="fa-brands fa-instagram  fa-xl redes icon5" style="color: #ffffff;"></i>
+        <a href= "https://open.spotify.com/intl-es/artist/3qm84nBOXUEQ2vnTfUTTFC" target="_blank"><i class="fa-brands fa-spotify    fa-xl redes icon1" style="color: #ffffff;"></i></a> 
+        <a href="https://www.youtube.com/@gunsnroses/about"                       target="_blank"><i class="fa-brands fa-youtube    fa-xl redes icon2" style="color: #ffffff;"></i></a>
+        <a href="https://twitter.com/gunsnroses"                                  target="_blank"><i class="fa-brands fa-x-twitter  fa-xl redes icon3" style="color: #ffffff;"></i></a>
+        <a href="https://www.facebook.com/gunsnroses"                             target="_blank"><i class="fa-brands fa-facebook-f fa-xl redes icon4" style="color: #ffffff;"></i></a>
+        <a href="https://www.instagram.com/gunsnroses/"                           target="_blank"><i class="fa-brands fa-instagram  fa-xl redes icon5" style="color: #ffffff;"></i></a>
      </footer>
+
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
