--- a/pages/integrantes.html
+++ b/pages/integrantes.html
@@ -11,7 +11,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../sass/main.css">
-</head>
+    <meta name="description" content="Aquí podras ver toda la informacion acerca de los grandes artistas que componen la banda de Guns And Roses, mantente informado sobre todos estos legendarios músicos">
+    <meta name="keywords"    content="integrantes, banda, rock, cantantes, musicos, artistas, axlrose, slash, mckagan, izzy">
+  </head>
 <body>
     <header>
     <nav class="navbar navbar-expand-lg  bg-dark border-bottom border-body navbar fixed-top navbar-dark">
