--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./sass/main.css">
+    <meta name="description" content="Informate con todo lo relacionado con la famosa banda de hard rock Guns And Roses, acudí a nuestra pagina web y a su gran variedad de informacion">
+    <meta name="keywords" content="gunsnroses, guns and roses, bandaderock, rock, hardrock, axlrose, slash, izzy, guns and roses sitio, sitiowebgunsnroses, gunsnrosesinfo, musica, banda, gunsnrosespage">
 </head>
 <body class="banner">
 
