--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,6 +11,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../sass/main.css">
+    <meta name="description" content="En esta página podrás contactarte con nosotros y enviarnos tu mensaje, ademas podrás iniciar sesion para esta al tanto de todas las novedades">
+    <meta name="keywords"    content="banda, rock, gunsnroses, hardrock, contacto, contactanos, escribenos, inicia sesion, mensaje, mail, nombre, contraseña">
 </head>
 
 <body>
