--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -14,6 +14,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../sass/main.css">
+    <meta name="description" content="Conoce la discografía completa de la famosa banda de rock Guns And Roses y escucha estos magnificos albums que tanto hicieron ruido en su epoca y lo siguen haciendo hoy dia en la actualidad">
+    <meta name="keywords"    content="banda, rock, discografia, album, disco, canciones, hits, gunsnroses, albums">
 </head>
 <body>
     <header>
