--- a/pages/tour.html
+++ b/pages/tour.html
@@ -14,7 +14,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../sass/main.css">
-</head>
+    <meta name="description" content="Enterate de todos los conciertos de la banda Guns And Roses desde la pagina, no te pierdas los increibles y unicos precios que tenemos, ¡No te quedes sin tu entrada para el tour!">
+    <meta name="keywords"    content="tour, concierto, cantantes, recital, guns n roses, banda, rock, hard rock, entradas, precios">
+  </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg  bg-dark border-bottom border-body navbar fixed-top navbar-dark">
