--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -10,7 +10,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@400;500&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/9f12e06fa6.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../sass/main.css">
@@ -50,72 +49,72 @@
     <main>
     <div class="album " >
         <div class="album__contenedor">
-           <img class="album__disco" src="../img/album1.jpg"  alt="Use your Illusion I">
+           <img class="album__disco" src="../img/album1.jpg"  alt="No se logró reproducir la imagen">
            <h3 class="album__nombre">Use your Illusion I</h3>
         </div>
 
         <div class="album__contenedor">
-            <img class="album__disco" src="../img/album2.jpg"  alt="Chinese democracy">
+            <img class="album__disco" src="../img/album2.jpg"  alt="No se logró reproducir la imagen">
             <h3 class="album__nombre">Chinese democracy</h3>
         </div>
 
         <div class="album__contenedor">
-            <img class="album__disco" src="../img/album3.jpg"  alt="Use your Illusion II">
+            <img class="album__disco" src="../img/album3.jpg"  alt="No se logró reproducir la imagen">
             <h3 class="album__nombre">Use your Illusion II</h3>
         </div>
 
         <div class="album__contenedor">
-            <img class="album__disco" src="../img/album4.jpg"  alt="The spaghetti incident?">
+            <img class="album__disco" src="../img/album4.jpg"  alt="No se logró reproducir la imagen">
             <h3 class="album__nombre">The spaghetti incident?</h3>
         </div>
 
         <div class="album__contenedor">
-            <img class="album__disco" src="../img/album5.jpg"  alt="Live era 87-93">
+            <img class="album__disco" src="../img/album5.jpg"  alt="No se logró reproducir la imagen">
             <h3 class="album__nombre">Live era 87-93</h3>
         </div>
 
          <div class="album__contenedor">
-            <img class="album__disco" src="../img/album7.jpg"  alt="Nothing lasts forever">
+            <img class="album__disco" src="../img/album7.jpg"  alt="No se logró reproducir la imagen">
             <h3 class="album__nombre">Nothing lasts forever</h3>
          </div>
 
          <div class="album__contenedor">
-            <img class="album__disco" src="../img/album8.jpg"  alt="Pasadena 1987">
+            <img class="album__disco" src="../img/album8.jpg"  alt="No se logró reproducir la imagen">
             <h3 class="album__nombre">Pasadena 1987</h3>
          </div>
 
          <div class="album__contenedor">
-            <img class="album__disco" src="../img/album9.jpg"  alt="Live radio broadcast">
+            <img class="album__disco" src="../img/album9.jpg"  alt="No se logró reproducir la imagen">
             <h3 class="album__nombre">Live radio broadcast</h3>
          </div>
 
           <div class="album__contenedor">
-            <img class="album__disco" src="../img/album10.jpg" alt="Wild horses">
+            <img class="album__disco" src="../img/album10.jpg" alt="No se logró reproducir la imagen">
             <h3 class="album__nombre">Wild horses</h3>
          </div>
 
          <div class="album__contenedor">
-            <img class="album__disco" src="../img/album11.jpg" alt="Live on air">
+            <img class="album__disco" src="../img/album11.jpg" alt="No se logró reproducir la imagen">
             <h3 class="album__nombre">Live on air</h3>
          </div>
 
          <div class="album__contenedor">
-            <img class="album__disco" src="../img/album12.jpg" alt="Mr. brownstone">
+            <img class="album__disco" src="../img/album12.jpg" alt="No se logró reproducir la imagen">
             <h3 class="album__nombre">Mr. brownstone</h3>
          </div>
 
          <div class="album__contenedor">
-            <img class="album__disco" src="../img/album13.jpg" alt="Deer creek 1991">
+            <img class="album__disco" src="../img/album13.jpg" alt="No se logró reproducir la imagen">
             <h3 class="album__nombre">Deer creek 1991</h3>
          </div>
 
          <div class="album__contenedor">
-            <img class="album__disco" src="../img/album14.jpg" alt="Bad obsession">
+            <img class="album__disco" src="../img/album14.jpg" alt="No se logró reproducir la imagen">
             <h3 class="album__nombre">Bad obsession</h3>
          </div>
 
          <div class="album__contenedor">
-            <img class="album__disco" src="../img/album15.jpg" alt="Use your illusion II">
+            <img class="album__disco" src="../img/album15.jpg" alt="No se logró reproducir la imagen">
             <h3 class="album__nombre">Use your illusion II</h3>
          </div>
        </div>
@@ -123,15 +122,16 @@
 
     <footer>
         <div class="footer">
-          <a href= "https://open.spotify.com/intl-es/artist/3qm84nBOXUEQ2vnTfUTTFC" target="_blank"><i class="fa-brands fa-spotify    fa-xl redes icon1" style="color: #ffffff;"></i></a> 
-        <a href="https://www.youtube.com/@gunsnroses/about"                       target="_blank"><i class="fa-brands fa-youtube    fa-xl redes icon2" style="color: #ffffff;"></i></a>
-        <a href="https://twitter.com/gunsnroses"                                  target="_blank"><i class="fa-brands fa-x-twitter  fa-xl redes icon3" style="color: #ffffff;"></i></a>
-        <a href="https://www.facebook.com/gunsnroses"                             target="_blank"><i class="fa-brands fa-facebook-f fa-xl redes icon4" style="color: #ffffff;"></i></a>
-        <a href="https://www.instagram.com/gunsnroses/"                           target="_blank"><i class="fa-brands fa-instagram  fa-xl redes icon5" style="color: #ffffff;"></i></a>
+        <a href="https://open.spotify.com/intl-es/artist/3qm84nBOXUEQ2vnTfUTTFC"    target="_blank"><i class="fa-brands fa-spotify    redes icon1"></i></a> 
+        <a href="https://www.youtube.com/@gunsnroses/about"                         target="_blank"><i class="fa-brands fa-youtube    redes icon2"></i></a>
+        <a href="https://twitter.com/gunsnroses"                                    target="_blank"><i class="fa-brands fa-x-twitter  redes icon3"></i></a>
+        <a href="https://www.facebook.com/gunsnroses"                               target="_blank"><i class="fa-brands fa-facebook-f redes icon4"></i></a>
+        <a href="https://www.instagram.com/gunsnroses/"                             target="_blank"><i class="fa-brands fa-instagram  redes icon5"></i></a>
         </div>
      </footer>
      
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+     <script src="https://kit.fontawesome.com/9f12e06fa6.js" crossorigin="anonymous"></script>
 </body>
 </html>
