--- a/pages/tour.html
+++ b/pages/tour.html
@@ -10,7 +10,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@600&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/9f12e06fa6.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../sass/main.css">
@@ -89,14 +88,16 @@
   
     <footer>
       <div class="footer">
-        <a href= "https://open.spotify.com/intl-es/artist/3qm84nBOXUEQ2vnTfUTTFC" target="_blank"><i class="fa-brands fa-spotify    fa-xl redes icon1" style="color: #ffffff;"></i></a> 
-        <a href="https://www.youtube.com/@gunsnroses/about"                       target="_blank"><i class="fa-brands fa-youtube    fa-xl redes icon2" style="color: #ffffff;"></i></a>
-        <a href="https://twitter.com/gunsnroses"                                  target="_blank"><i class="fa-brands fa-x-twitter  fa-xl redes icon3" style="color: #ffffff;"></i></a>
-        <a href="https://www.facebook.com/gunsnroses"                             target="_blank"><i class="fa-brands fa-facebook-f fa-xl redes icon4" style="color: #ffffff;"></i></a>
-        <a href="https://www.instagram.com/gunsnroses/"                           target="_blank"><i class="fa-brands fa-instagram  fa-xl redes icon5" style="color: #ffffff;"></i></a>
-     </footer>
+        <a href="https://open.spotify.com/intl-es/artist/3qm84nBOXUEQ2vnTfUTTFC"    target="_blank"><i class="fa-brands fa-spotify    redes icon1"></i></a> 
+        <a href="https://www.youtube.com/@gunsnroses/about"                         target="_blank"><i class="fa-brands fa-youtube    redes icon2"></i></a>
+        <a href="https://twitter.com/gunsnroses"                                    target="_blank"><i class="fa-brands fa-x-twitter  redes icon3"></i></a>
+        <a href="https://www.facebook.com/gunsnroses"                               target="_blank"><i class="fa-brands fa-facebook-f redes icon4"></i></a>
+        <a href="https://www.instagram.com/gunsnroses/"                             target="_blank"><i class="fa-brands fa-instagram  redes icon5"></i></a>
+     </div>
+      </footer>
 
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+     <script src="https://kit.fontawesome.com/9f12e06fa6.js" crossorigin="anonymous"></script>
 </body>
 </html>
