--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>discografia</title>
+    <title>Guns And Roses - Escucha la Discografía</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
@@ -12,8 +12,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@400;500&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="shortcut icon" href="../img/gunsnroseslogo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="../sass/main.css">
-    <meta name="description" content="Conoce la discografía completa de la famosa banda de rock Guns And Roses y escucha estos magnificos albums que tanto hicieron ruido en su epoca y lo siguen haciendo hoy dia en la actualidad">
+    <meta name="description" content="Escucha su increible discografía">
     <meta name="keywords"    content="banda, rock, discografia, album, disco, canciones, hits, gunsnroses, albums">
 </head>
 <body>
@@ -49,72 +50,72 @@
     <main>
     <div class="album " >
         <div class="album__contenedor">
-           <img class="album__disco" src="../img/album1.jpg"  alt="No se logró reproducir la imagen">
+           <img class="album__disco" src="../img/album1.jpg"  alt="Persona escrbiendo con fondo amarillo y rojo">
            <h3 class="album__nombre">Use your Illusion I</h3>
         </div>
 
         <div class="album__contenedor">
-            <img class="album__disco" src="../img/album2.jpg"  alt="No se logró reproducir la imagen">
+            <img class="album__disco" src="../img/album2.jpg"  alt="bicicleta con un canasto">
             <h3 class="album__nombre">Chinese democracy</h3>
         </div>
 
         <div class="album__contenedor">
-            <img class="album__disco" src="../img/album3.jpg"  alt="No se logró reproducir la imagen">
+            <img class="album__disco" src="../img/album3.jpg"  alt="Persona escrbiendo con fondo azul">
             <h3 class="album__nombre">Use your Illusion II</h3>
         </div>
 
         <div class="album__contenedor">
-            <img class="album__disco" src="../img/album4.jpg"  alt="No se logró reproducir la imagen">
+            <img class="album__disco" src="../img/album4.jpg"  alt="nombre de la banda con fondo de fideos">
             <h3 class="album__nombre">The spaghetti incident?</h3>
         </div>
 
         <div class="album__contenedor">
-            <img class="album__disco" src="../img/album5.jpg"  alt="No se logró reproducir la imagen">
+            <img class="album__disco" src="../img/album5.jpg"  alt="nombre de la banda con fondo de periodicos">
             <h3 class="album__nombre">Live era 87-93</h3>
         </div>
 
          <div class="album__contenedor">
-            <img class="album__disco" src="../img/album7.jpg"  alt="No se logró reproducir la imagen">
+            <img class="album__disco" src="../img/album7.jpg"  alt="cantantes en un escenario">
             <h3 class="album__nombre">Nothing lasts forever</h3>
          </div>
 
          <div class="album__contenedor">
-            <img class="album__disco" src="../img/album8.jpg"  alt="No se logró reproducir la imagen">
+            <img class="album__disco" src="../img/album8.jpg"  alt="persona cantando con un filtro rojo">
             <h3 class="album__nombre">Pasadena 1987</h3>
          </div>
 
          <div class="album__contenedor">
-            <img class="album__disco" src="../img/album9.jpg"  alt="No se logró reproducir la imagen">
+            <img class="album__disco" src="../img/album9.jpg"  alt="calavera con dos armas">
             <h3 class="album__nombre">Live radio broadcast</h3>
          </div>
 
           <div class="album__contenedor">
-            <img class="album__disco" src="../img/album10.jpg" alt="No se logró reproducir la imagen">
+            <img class="album__disco" src="../img/album10.jpg" alt="caballo con fuego">
             <h3 class="album__nombre">Wild horses</h3>
          </div>
 
          <div class="album__contenedor">
-            <img class="album__disco" src="../img/album11.jpg" alt="No se logró reproducir la imagen">
+            <img class="album__disco" src="../img/album11.jpg" alt="dos cantantes con filtro dorado">
             <h3 class="album__nombre">Live on air</h3>
          </div>
 
          <div class="album__contenedor">
-            <img class="album__disco" src="../img/album12.jpg" alt="No se logró reproducir la imagen">
+            <img class="album__disco" src="../img/album12.jpg" alt="logo con una calle de fondo">
             <h3 class="album__nombre">Mr. brownstone</h3>
          </div>
 
          <div class="album__contenedor">
-            <img class="album__disco" src="../img/album13.jpg" alt="No se logró reproducir la imagen">
+            <img class="album__disco" src="../img/album13.jpg" alt="cantante con un fondo naranja">
             <h3 class="album__nombre">Deer creek 1991</h3>
          </div>
 
          <div class="album__contenedor">
-            <img class="album__disco" src="../img/album14.jpg" alt="No se logró reproducir la imagen">
+            <img class="album__disco" src="../img/album14.jpg" alt="logo con fondo oscuro">
             <h3 class="album__nombre">Bad obsession</h3>
          </div>
 
          <div class="album__contenedor">
-            <img class="album__disco" src="../img/album15.jpg" alt="No se logró reproducir la imagen">
+            <img class="album__disco" src="../img/album15.jpg" alt="nombre de la banda con rosas de fondo">
             <h3 class="album__nombre">Use your illusion II</h3>
          </div>
        </div>
