--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guns n Roses</title>
+    <title>Guns And Roses - Página de Inicio</title>
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -16,8 +16,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="shortcut icon" href="./img/gunsnroseslogo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="./sass/main.css">
-    <meta name="description" content="Informate con todo lo relacionado con la famosa banda de hard rock Guns And Roses, acudí a nuestra pagina web y a su gran variedad de informacion">
+    <meta name="description" content="Informate con todo lo relacionado a la famosa banda de rock Guns And Roses">
     <meta name="keywords" content="gunsnroses, guns and roses, bandaderock, rock, hardrock, axlrose, slash, izzy, guns and roses sitio, sitiowebgunsnroses, gunsnrosesinfo, musica, banda, gunsnrosespage">
 </head>
 <body class="banner">
@@ -51,8 +52,9 @@
         </div>
       </nav>
      </header>
-    <main>
-    <h1 class="animate__animated animate__fadeIn animate__delay-0.2s titulo"><i>GUNS AND ROSES</i></h1>
+
+    <main class="main-inicio">
+        <h1 class="animate__animated animate__fadeIn animate__delay-0.2s titulo"><i>GUNS AND ROSES</i></h1>
     </main>
      
      <footer>
@@ -64,6 +66,7 @@
         <a href="https://www.instagram.com/gunsnroses/"                             target="_blank"><i class="fa-brands fa-instagram  redes icon5"></i></a>
      </div>
       </footer>
+
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
      <script src="https://kit.fontawesome.com/9f12e06fa6.js" crossorigin="anonymous"></script>
