--- a/pages/integrantes.html
+++ b/pages/integrantes.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=">
-    <title>integrantes</title>
+    <title>Guns And Roses - Conoce a los Integrantes</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@400;500&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="shortcut icon" href="../img/gunsnroseslogo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="../sass/main.css">
-    <meta name="description" content="Aquí podras ver toda la informacion acerca de los grandes artistas que componen la banda de Guns And Roses, mantente informado sobre todos estos legendarios músicos">
+    <meta name="description" content="Conoce a los grandes artistas de la banda">
     <meta name="keywords"    content="integrantes, banda, rock, cantantes, musicos, artistas, axlrose, slash, mckagan, izzy">
   </head>
 <body>
@@ -46,24 +47,25 @@
      
     <main>
      <div class="info" id="axl">
-        <img src="../img/axlrose.jpg" alt="imagen de axl rose" class="cantante">
+        <img src="../img/axlrose.jpg" alt="axl rose cantando" class="cantante">
         <p class="info-cantante"><i> Axl Rose, es un cantante, compositor y pianista estadounidense. Es el líder y vocalista de la banda de hard rock Guns N' Roses, con la que tuvo gran éxito alrededor del mundo a finales de las décadas de 1980 y principios de los 1990. En el año 2012, Rose fue incluido en el Salón de la Fama del Rock junto a sus compañeros de la formación original de Guns N' Roses, aunque prefirió no asistir al evento, hizo pública una carta de agradecimiento.</i></p>
      </div>
      <div class="info">
-     <img src="../img/slash.jpg" alt="imagen de slash" class="cantante">
+     <img src="../img/slash.jpg" alt="slash tocando la guitarra" class="cantante">
      <p class="info-cantante"><i>Saul Hudson (Hampstead, Londres; 23 de julio de 1965), más conocido por su nombre artístico Slash, es un músico y compositor británico-estadounidense, conocido principalmente por ser el guitarrista principal de la banda de hard rock Guns N' Roses.
 
         Es el guitarrista principal del grupo de rock estadounidense Guns N' Roses, volviendo después de casi veinte años fuera de la banda. En 2004, cofundó el supergrupo Velvet Revolver junto con sus compañeros de Guns N' Roses.</i></p>
     </div>
     <div class="info" id="izzy">
-      <img  src="../img/izzy.jog.jpg" alt="Izzy Stradlin" class="cantante">
+      <img  src="../img/izzy.jog.jpg" alt="Stradlin posando" class="cantante">
       <p class="info-cantante"><i>Jeffrey Dean lsbell (Lafayette, Indiana, 8 de abril de 1962) más conocido como Izzy Stradlin es un músico, guitarrista, compositor y productor discográfico estadounidense. Es conocido principalmente por ser el guitarrista rítmico, compositor principal y uno de los miembros fundadores de la banda de hard rock Guns N' Roses, la cual abandonó en la cima de su fama en 1991 habiendo grabado cuatro álbumes de estudio.</i></p>
     </div>
 
-    <div class="info">
-      <img class="cantante" src="../img/mckagan.jpg" alt="McKagan">
+    <div class="info reverse">
+      <img class="cantante" src="../img/mckagan.jpg" alt="McKagan tocando la guitarra">
       <p class="info-cantante"><i>Michael Andrew "Duff" McKagan (Seattle, Washington, Estados Unidos; 5 de febrero de 1964) es un músico, compositor y productor discográfico estadounidense, es el bajista y vocalista hasta el año 1997 de la banda de hard rock Guns N' Roses y guitarrista de Loaded. McKagan empezó a tocar la guitarra a los 6 años. En 2011 publicó su autobiografía. En 2014 se reintegró de manera temporal a Guns N' Roses para la gira sudamericana.</i></p>
     </div>
+    </section>
   </main>
      
      <footer>
