--- a/pages/tour.html
+++ b/pages/tour.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tour</title>
+    <title>Guns And Roses - Compra entradas para el Tour de Latam</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@400;500&display=swap" rel="stylesheet">
@@ -12,8 +12,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@600&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="shortcut icon" href="../img/gunsnroseslogo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="../sass/main.css">
-    <meta name="description" content="Enterate de todos los conciertos de la banda Guns And Roses desde la pagina, no te pierdas los increibles y unicos precios que tenemos, ¡No te quedes sin tu entrada para el tour!">
+    <meta name="description" content="Compra tus entradas para el tour de Latam">
     <meta name="keywords"    content="tour, concierto, cantantes, recital, guns n roses, banda, rock, hard rock, entradas, precios">
   </head>
 <body>
